--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <div class="container">
         <h1>tcfca听力速刷题库</h1>
         <div class="difficulty-buttons">
-            <a href="#" class="difficulty-level a1">A1</a>
+            <!-- <a href="#" class="difficulty-level a1">A1</a>
             <a href="#" class="difficulty-level a2">A2</a>
             <a href="#" class="difficulty-level b1">B1</a>
-            <a href="#" class="difficulty-level b2">B2</a>
+            <a href="#" class="difficulty-level b2">B2</a> -->
             <a href="c1.html" class="difficulty-level c1">C1</a>
-            <a href="#" class="difficulty-level c2">C2</a>
+            <a href="c2.html" class="difficulty-level c2">C2</a>
         </div>
     </div>
 </body>
